Navbar fix
Navbar no longer overlaps rest of page

--- a/main.css
+++ b/main.css
@@ -9,9 +9,12 @@ body{
 
 .jumbotron{
 	background-image: url('images/polar.jpg');
-	opacity: 0.5;
 	background-size: cover;
 	background-attachment: fixed;
+}
+
+span.highlight {
+	background-color: white;
 }
 
 .title h1{
@@ -44,7 +47,7 @@ body{
 }
 
 #myCarousel img{
-	max-width: 450px;
+	width: 450px;
 	height: 300px;
 }
 
